+Добавление в окно создания счета тип счета +Проверка на кол-во типов счетов

--- a/HM11.6/HM11.6.csproj
+++ b/HM11.6/HM11.6.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\Accounts\AccountsInfo.cs" />
     <Compile Include="Models\Accounts\DepositAccount.cs" />
     <Compile Include="Models\Accounts\NoDepositAccount.cs" />
+    <Compile Include="Models\Accounts\TypeAccount.cs" />
     <Compile Include="Models\AppSettings\AppSetting.cs" />
     <Compile Include="Models\AppSettings\AppSettingRepository.cs" />
     <Compile Include="Models\AppSettings\IAppSetting.cs" />
